# nvidia_ddraw_fix

./: .gitignore  CMakeLists.txt  Changelog.txt  README_nvidia_ddraw_fix.txt  config.h.cmake  hdjtsatu  nvidia_fix.tp2
cmake/: add_rc_file.cmake
src/: CMakeLists.txt  compat.h  ddraw_traits.cpp  ddraw_traits.h  exports.def  fake_ddraw.cpp  fake_ddraw.h  fake_ddraw_surf.cpp  fake_ddraw_surf.h  main.cpp  main.h  refcounted_wrapper.h  trace.cpp  trace.h  version.rc
src/patcher/: CMakeLists.txt  main.cpp  strncasecmp.h
